--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<java-jwt.version>4.5.0</java-jwt.version>
 	</properties>
 	<dependencies>
 		<dependency>
